tests/rosetta/out/Rust/averages-pythagorean-means.error
rustc: exit status 1
error[E0689]: can't call method `parse` on ambiguous numeric type `{integer}`
  --> /tmp/averages-pythagorean-means.rs:33:23
   |
33 |             let f = n.parse::<f64>().unwrap();
   |                       ^^^^^
   |
help: you must specify a type for this binding, like `i32`
   |
31 |         let mut n: i32 = 1;
   |                  +++++

error[E0308]: mismatched types
  --> /tmp/averages-pythagorean-means.rs:44:91
   |
44 | ...   println!("{}", vec![format!("{}", format!("{}{}", "A >= G >= H: ", a >= g && g >= h.to_string()))].into_iter().filter(|s| !s.is_emp...
   |                                                                                    -    ^^^^^^^^^^^^^ expected `f64`, found `String`
   |                                                                                    |
   |                                                                                    expected because this is `f64`
   |
help: try removing the method call
   |
44 -         println!("{}", vec![format!("{}", format!("{}{}", "A >= G >= H: ", a >= g && g >= h.to_string()))].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
44 +         println!("{}", vec![format!("{}", format!("{}{}", "A >= G >= H: ", a >= g && g >= h))].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0689.
For more information about an error, try `rustc --explain E0308`.
